--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -57,41 +57,41 @@ The main tasks for this exercise are as follows:
 >  **Note:** You can decrease the value to 2, but not increase it.
   - Update domains:  **5**
 >  **Note:** The number of update domains can vary between 5 and 20.
-  - Subscription:  **_Your Azure subscription_**_._
+  - Subscription:  **_Your Azure subscription_**
 
   - Resource group name:  **ResDevWebRG**
 
-  - Location:  **_The Azure region closest to the location of your lab computer_**_._
+  - Location:  **_The Azure region closest to the location of your lab computer_**
 
 
 1. From the Azure portal, create a new virtual machine with the following settings:
 
 
   - Name: **ResDevWebVM1**
+  
+  - Disk type: **HDD**
 
   - User name:  **Student**
 
   - Password:  **Pa$$w0rd1234**
 
-  - Subscription:  **_Your Azure subscription_**_._
+  - Subscription:  **_Your Azure subscription_**
 
   - Resource group:  **ResDevWebRG**
 
-  - Location:  **_The same location you chose for the availability set_**_._
-
-  - Disk type: ** HDD **
+  - Location:  **_The same location you chose for the availability set_**
 
   - Size:  **A1 Standard**
 
-  - Storage account:  **_Accept the default_**_._
+  - Storage account:  **_Accept the default_**
 
   - Virtual network:  **ResDevWebVNet**
 
-  - Subnet:  **_Accept the default_**_._
+  - Subnet:  **_Accept the default_**
 
-  - Public IP address:  **ResDevWebVM1**
+  - Public IP address:  **ResDevWebVM1PIP**
 
-  - Network security group:  **ResDevWebNSG**
+  - Network security group:  **ResDevWebNSG1**
 
   - Monitoring:  **Disabled**
 
@@ -102,28 +102,28 @@ The main tasks for this exercise are as follows:
 
 
   - Name:  **ResDevWebVM2**
+  
+  - Disk type: **HDD**
 
   - User name:  **Student**
 
   - Password:  **Pa$$w0rd1234**
 
-  - Subscription:  **_Your Azure subscription_**_._
+  - Subscription:  **_Your Azure subscription_**
 
   - Resource group:  **ResDevWebRG**
 
-  - Location:  **_The same location you chose for the availability set_**_._
+  - Location:  **_The same location you chose for the availability set_**
 
   - Size:  **A1 Standard**
 
-  - Disk type:  **Standard**
-
-  - Storage account:  **_Accept the default_**_._
+  - Storage account:  **_Accept the default_**
 
   - Virtual network:  **ResDevWebVNet**
 
-  - Subnet:  **_Accept the default_**_._
+  - Subnet:  **_Accept the default_**
 
-  - Public IP address:  **ResDevWebVM2**
+  - Public IP address:  **ResDevWebVM2PIP**
 
   - Network security group:  **ResDevWebNSG2**
 
@@ -147,13 +147,13 @@ The main tasks for this exercise are as follows:
 
   - Type:  **Public**
 
-  - Public IP address:  **_Create new_** dynamic address named **ResDevWebLBIP.**
+  - Public IP address:  **_Create new_** dynamic address named **ResDevWebLBIP**
 
-  - Subscription:  **Your subscription.**
+  - Subscription:  **_Your Azure subscription_**
 
   - Resource group:  **ResDevWebRG**
 
-  - Location:  **_The same location you chose for the availability set_**_._
+  - Location:  **_The same location you chose for the availability set_**
 
   - Pin to dashboard:  **Unchecked**
 
@@ -252,7 +252,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Test the DSC configuration and virtual machine availability
   
-1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG** security group with the following settings:
+1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG1** security group with the following settings:
 
 
   - Name:  **allow-http**
@@ -260,19 +260,17 @@ The main tasks for this exercise are as follows:
   - Priority:  **1100**
 
   - Source:  **Any**
+  
+  - Service: **Custom**
 
   - Protocol:  **TCP**
 
-  - Source port range: ** ***
-
-  - Destination:  **Any**
-
-  - Destination port range:  **80**
+  - Port range:  **80**
 
   - Action:  **Allow**
 
 
-1. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG2** security group with the following settings:
+2. From the Azure portal within the Internet Explorer window on MIA-CL1, create a new inbound security rule for the  **ResDevWebNSG2** security group with the following settings:
 
 
   - Name:  **allow-http**
@@ -280,35 +278,29 @@ The main tasks for this exercise are as follows:
   - Priority:  **1100**
 
   - Source:  **Any**
-
-  - Protocol:  **TCP**
-
-  - Source port range:  *****
-
-  - Destination:  **Any**
-
-  - Destination port range:  **80**
+  
+  - Service: **HTTP**
 
   - Action:  **Allow**
 
 
-1. From the Azure portal, identify the IP address of the  **ResDevWebLB** load balancer.
+3. From the Azure portal, identify the IP address of the  **ResDevWebLB** load balancer.
 
-2. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session and browse to this IP address.
+4. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session and browse to this IP address.
 
-3. Verify that you can access the default IIS webpage and close the InPrivate Browsing session.
+5. Verify that you can access the default IIS webpage and close the InPrivate Browsing session.
 
-4. From the Remote Desktop session window, stop the  **World Wide Web Publishing Service** service on both **ResDevWebVM1** and **ResDevWebVM2**.
+6. From the Remote Desktop session window, stop the  **World Wide Web Publishing Service** service on both **ResDevWebVM1** and **ResDevWebVM2**.
 
-5. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. 
+7. From MIA-CL1, open a new InPrivate Browsing Internet Explorer session. 
 
-6. In the new InPrivate Browsing window, delete browsing history.
+8. In the new InPrivate Browsing window, delete browsing history.
 
-7. Browse to the IP address of the  **ResDevWebLB** load balancer again and verify that you can no longer access the default IIS webpage.
+9. Browse to the IP address of the  **ResDevWebLB** load balancer again and verify that you can no longer access the default IIS webpage.
 
-8. From the Remote Desktop session window, start the  **World Wide Web Publishing Service** service on **ResDevWebVM1**.
+10. From the Remote Desktop session window, start the  **World Wide Web Publishing Service** service on **ResDevWebVM1**.
 
-9. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage.
+11. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage.
 
 >  **Note:** Optionally you can repeat this sequence, but this time stopping the **World Wide Web Publishing Service** on ResDevWebVM1 and starting it on ResDevWebVM2. As long as the service is running on at least one of the two virtual machines, you should be able to access the webpage.
 
@@ -342,7 +334,7 @@ The main tasks for this exercise are as follows:
 
   - Size:  **1023**
 
-  - Location:  **_Note that this cannot be changed since the location of the VM determines the location of its disks_**_._
+  - Location:  **_Note that this cannot be changed since the location of the VM determines the location of its disks_**
 
   - Host caching:  **None**
 
