--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -64,7 +64,7 @@ The main tasks for this exercise are as follows:
   - Location:  **_The Azure region closest to the location of your lab computer_**
 
 
-1. From the Azure portal, create a new virtual machine with the following settings:
+4. From the Azure portal, create a new _Windows Server 2012 R2 Datacenter_ virtual machine with the following settings:
 
 
   - Name: **ResDevWebVM1**
@@ -98,7 +98,7 @@ The main tasks for this exercise are as follows:
   - Availability set:  **ResDevWebAS**
 
 
-1. From the Azure portal, create a new virtual machine with the following settings:
+5. From the Azure portal, create a new  _Windows Server 2012 R2 Datacenter_ virtual machine with the following settings:
 
 
   - Name:  **ResDevWebVM2**
@@ -132,9 +132,9 @@ The main tasks for this exercise are as follows:
   - Availability set:  **ResDevWebAS**
 
 
-1. From the Azure portal, display the blade of the  **ResDevWebAS** availability set. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Point out that each VM has a unique fault domain and update domain.
+6. From the Azure portal, display the blade of the  **ResDevWebAS** availability set. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Point out that each VM has a unique fault domain and update domain.
 
-2. Leave the instance of Internet Explorer with the Azure portal open.
+7. Leave the instance of Internet Explorer with the Azure portal open.
 
 
 
@@ -158,11 +158,11 @@ The main tasks for this exercise are as follows:
   - Pin to dashboard:  **Unchecked**
 
 
-1. Wait for the deployment to complete. This should take a few seconds.
+2. Wait for the deployment to complete. This should take a few seconds.
 
-2. From the Azure portal, add a backend pool named  **ResDevWebLBPool** to the newly created load balancer consisting of the **ResDevWebAS** availability set and both virtual machines that are part of it (ResDevWebVM1 and ResDevWebVM2).
+3. From the Azure portal, add a backend pool named  **ResDevWebLBPool** to the newly created load balancer consisting of the **ResDevWebAS** availability set and both virtual machines that are part of it (ResDevWebVM1 and ResDevWebVM2).
 
-3. Add a probe to the load balancer with the following settings:
+4. Add a probe to the load balancer with the following settings:
 
 
   - Name:  **ResDevWebProbe80**
@@ -178,7 +178,7 @@ The main tasks for this exercise are as follows:
   - Unhealthy threshold:  **2**
 
 
-1. Add a load balancer rule to the newly created load balancer with the following settings:
+5. Add a load balancer rule to the newly created load balancer with the following settings:
 
 
   - Name:  **ResDevWebLBRule80**
@@ -200,7 +200,7 @@ The main tasks for this exercise are as follows:
   - Floating IP:  **Disabled**
 
 
-1. Refresh the Azure portal. In the  **Setting** blade of ResDevWebLB, you should be able to identify its public IP address. Note that at this point you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings. You will change these settings later in this lab.
+6. Refresh the Azure portal. In the  **Setting** blade of ResDevWebLB, you should be able to identify its public IP address. Note that at this point you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings. You will change these settings later in this lab.
 
 
 >  **Result**: After completing this exercise, you should have created an availability set for Azure IaaS v2 virtual machines and configured them up as a load balanced pair.
@@ -339,7 +339,7 @@ The main tasks for this exercise are as follows:
   - Host caching:  **None**
 
 
-1. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
+2. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
 
 
 
