--- a/Instructions/20533C_LAB_05.md
+++ b/Instructions/20533C_LAB_05.md
@@ -57,7 +57,7 @@ The main tasks for this exercise are as follows:
 3. To create a new web app, use the following information:
 
 
-  - App name:  _any unique valid server name_
+  - App name:  **_any unique valid server name_**
 
   - Resource Group:  **AdatumLabWebRG**
 
@@ -65,7 +65,7 @@ The main tasks for this exercise are as follows:
 
   - Pricing tier:  **S1 Standard**
 
-  - Location:  _a location near you_
+  - Location:  **_a location near you_**
 
 
 
@@ -75,16 +75,16 @@ The main tasks for this exercise are as follows:
 
 Name:  **Staging**
 
-Configuration Source:  _choose the web app you created in Task 1_
+Configuration Source:  **_choose the web app you created in Task 1_**
 
 
-1. Open Azure PowerShell window and sign in to the Azure subscription with a Microsoft account that is either the Service Admin or co-admin of your subscription. 
+2. Open Azure PowerShell window and sign in to the Azure subscription with a Microsoft account that is either the Service Admin or co-admin of your subscription. 
 
-2. If you have multiple subscriptions, select the target one by running the Azure PowerShell  **Set-AzureRmContext** cmdlet.
+3. If you have multiple subscriptions, select the target one by running the Azure PowerShell  **Set-AzureRmContext** cmdlet.
 
-3. Use the Azure PowerShell  **Get-AzureRMWebApp** and **Get-AzureRMWebAppSlot** cmdlets to identify the web app and staging slot that you created.
+4. Use the Azure PowerShell  **Get-AzureRMWebApp** and **Get-AzureRMWebAppSlot** cmdlets to identify the web app and staging slot that you created.
 
-4. Keep the Azure PowerShell window open.
+5. Keep the Azure PowerShell window open.
 
 
 
@@ -125,7 +125,7 @@ The main tasks for this exercise are as follows:
   -  **D:\LabFiles\Lab05\Starter\AdatumWebsite\AdatumWebsite.sln**
 
 
-1. Start debugging the web application, examine the contents, and then close Internet Explorer.
+3. Start debugging the web application, examine the contents, and then close Microsoft Edge.
 
 >  **Note:** When you start the web application in Visual Studio, the web app runs in IIS Express on your local workstation.
 
@@ -139,7 +139,9 @@ The main tasks for this exercise are as follows:
 3. Ensure that the Release configuration is used for the published web app.
 
 4. Preview the file changes, and then  **Publish** the new website to Azure.
+
 >  **Note:** The publish operation may take approximately two to three minutes. When the operation is complete, Microsoft Edge opens and displays the new web app hosted in Azure.
+
 5. Verify that A. Datum's web app is open in Microsoft Edge, and then verify the web app's current address.
 
 6. Close the Home Page tab.
@@ -176,13 +178,13 @@ The main tasks for this exercise are as follows:
   -  **D:\LabFiles\Lab05\Starter\NewAdatumWebsite\AdatumWebsite.sln**
 
 
-1. Publish the new web app, and then import the staging publish settings file that you just downloaded.
+3. Publish the new web app, and then import the staging publish settings file that you just downloaded.
 
-2. Validate the connection, and then choose the  **Release** configuration.
+4. Validate the connection, and then choose the  **Release** configuration.
 
-3. Publish the new web app to the Staging slot.
+5. Publish the new web app to the Staging slot.
 
-4. Close Internet Explorer and Visual Studio.
+6. Close Microsoft Edge and Visual Studio.
 
 
 
@@ -203,11 +205,12 @@ The main tasks for this exercise are as follows:
 #### Task 3: Roll back a deployment
   
 1. In the Azure portal, swap the staging and production slots again.
+
 >  **Note:** By swapping the slots a second time, you simulate a deployment rollback.
+
 2. When the swap is complete, browse the web app. Notice that the color scheme is reverted to the old scheme.
 
 3. Close the A. Datum tab in Internet Explorer. 
-
 
 >  **Result**: After completing this exercise, you should have an updated web app staged and published in Azure. 
 
@@ -247,26 +250,28 @@ The main tasks for this exercise are as follows:
 
   - Resource group:  **AdatumLabWebRG2**
 
-  - Name: Use the name of your original web app with the number 2 appended _._
+  - Name: **Use the name of your original web app with the number 2 appended.**
 
   - Service plan:  **StandardPlan**
 
-  - Location:  _"SecondLocation"._
+  - Location:  **_"SecondLocation"_**
 
 
-1. In the Azure portal, download a publishing profile for the web app you just created ( _WebappName_2).
+6. In the Azure portal, download a publishing profile for the web app you just created ( _WebappName_2).
 
-2. Open the following project in Visual Studio:
+7. Open the following project in Visual Studio:
 
 
   -  **D:\LabFiles\Lab05\Starter\AdatumWebsite\AdatumWebsite.sln**
 
 
-1. Start the Publish Web Wizard, and then import the publish settings file that you just downloaded. 
->  **Note:** Be sure to add a new publish settings file on the **Profile** tab, so that you can publish its content to the new web app.
-2. Validate the connection, and then choose the Release configuration.
+8. Start the Publish Web Wizard, and then import the publish settings file that you just downloaded. 
 
-3. Publish the web app, and then close Internet Explorer and Visual Studio.
+>  **Note:** Be sure to add a new publish settings file on the **Profile** tab, so that you can publish its content to the new web app.
+
+9. Validate the connection, and then choose the Release configuration.
+
+10. Publish the web app, and then close Microsoft Edge and Visual Studio.
 
 
 
@@ -275,7 +280,7 @@ The main tasks for this exercise are as follows:
 - In the Azure portal, create a new Traffic Manager profile by using the following information:
 
 
-  - DNS Prefix:  _Use unique domain name_
+  - DNS Prefix:  **_Use unique domain name_**
 
   - Routing Method:  **Performance**
 
@@ -296,7 +301,9 @@ The main tasks for this exercise are as follows:
 1. Use the DNS name listed in the newly created Traffic Manager profile in the Azure Portal to browse to the corresponding URL by using Internet Explorer.
 
 2. Use the  **nslookup** command to resolve the DNS name for your Traffic Manager profile.
+
 >  **Note:** In the DNS aliases, Traffic Manager returns the web app you created in Exercise 1, which is the closest to your physical location.
+
 3. In the Azure portal, disable the Traffic Manager endpoint that is the web app you created in Exercise 1.
 
 4. Use the  **nslookup** command to resolve the DNS NAME for your Traffic Manager profile. The results should differ from those in step 2.
