--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -107,7 +107,7 @@ The main tasks for this exercise are as follows:
 2. In the Windows PowerShell ISE window, use AzCopy to copy all of the .png files in the  **D:\Labfiles\Lab06\Starter\asset-images** folder to the **asset-images** container in your storage account. Use the code snippets in the **ExampleCommands.ps1** script in the **D:\Labfiles\Lab06\Starter\** folder to help you during this exercise. Ensure that you copy your commands to the Command Prompt window, and do not try to run them as Windows PowerShell commands. This involves replacing all placeholders in the existing script with the corresponding values that represent your storage account name and primary access key, and then running the following command:
 
   ```
-  AzCopy /Dest:https://<your storage account>.blob.core.windows.net/asset-images /destkey:<your primary access key> /Source:asset-images
+  AzCopy /Dest:https://<your storage account>.blob.core.windows.net/asset-images /destkey:<your primary access key> /Source:D:\Labfiles\Lab06\Starter\asset-images
   ```
 
 3. Wait for the command to complete, and then view the file transfer information that displays.
