--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -282,7 +282,7 @@ The main tasks for this exercise are as follows:
 >  **Note:** This script will remove Azure services in your subscription. We therefore recommended that you use an Azure trial pass that was provisioned specifically for this course, and not your own Azure account.
 > The script will take 5-10 minutes to reset your Azure environment, ready for the next lab.
 > The script removes all storage, virtual machines, virtual networks, cloud services, and resource groups.
-> Important: The script might not be able to access a storage account to delete it (if this occurs, you will see an error). If you find objects remaining after the reset script is complete, you can rerun the  **Reset-Azure** script, or you can use the Azure portal and the Azure classic portal to delete all the objects in your Azure subscription manuallyâ€”with the exception of the default directory.
+> Important: The script might not be able to access a storage account to delete it (if this occurs, you will see an error). If you find objects remaining after the reset script is complete, you can rerun the  **Reset-Azure** script, or you can use the Azure portal and the Azure classic portal to delete all the objects in your Azure subscription manually with the exception of the default directory.
 
 >  **Result**: At the end of this exercise, you should have created an Azure Backup vault in your subscription, created Azure Backup vault credentials, and installed the Azure Backup agent on the MIA-CL1 lab computer. You should have backed up the contents of the asset-images and invoices folders to the backup vault.
 
