--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -160,7 +160,7 @@ The main tasks for this exercise are as follows:
 1. Connect to the AdatumSvr1 VM in your Azure subscription by using the following credentials; the setup script that you ran earlier in the module created this VM:
 
 
-  - User name:  **AdatumSvr1\Student**
+  - User name:  **Student**
 
   - Password:  **Pa$$w0rd123**
 
