--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -211,7 +211,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Create a backup vault
   
-1. In Internet Explorer, open the classic Azure portal **https://manage.windowsazure.com/**.
+1. In Internet Explorer, open the Azure classic portal **https://manage.windowsazure.com/**.
 
 2. Create a new backup vault in your closest region.
 
