--- a/Instructions/20533C_LAB_07.md
+++ b/Instructions/20533C_LAB_07.md
@@ -62,8 +62,14 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
 
   - Name: **operations**
+  
+  - Subsciption: **_your Azure Subscription_**
+  
+  - Resource group:  **OpsRG**
+  
+  - Select source:  **Blank database**
 
-  - SQL server
+  - **Server:**
 
   - Server name: **any valid unique name**
 
@@ -79,12 +85,12 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
   - Allow azure services to access server: **Enabled**
 
-  - Select source:  **Blank database**
+  - Want to use SQL elastic pool?: **Not now**
 
   - Pricing tier:  **S1 Standard**
-
-  - Resource group:  **OpsRG**
-
+  
+  - Collation: **accept the default**
+  
   - Pin to dashboard: **Enabled**
 
 
