--- a/Instructions/20533C_LAB_07.md
+++ b/Instructions/20533C_LAB_07.md
@@ -69,7 +69,7 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
   
   - Select source:  **Blank database**
 
-  - **Server:**
+  - **Server:** **_Create a new server_**
 
   - Server name: **any valid unique name**
 
