--- a/Instructions/20533C_LAB_07.md
+++ b/Instructions/20533C_LAB_07.md
@@ -161,11 +161,11 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 5. On the  **Metric** blade, add an alert with the following settings:
 
 
-  - Resource: leave the default setting in place
+  - Resource: **leave the default setting in place**
 
-  - Name:  **operations storage alert**
+  - Name:  **Operations Storage Alert**
 
-  - Description:  **storage alert for operations database**
+  - Description:  **Storage alert for operations database**
 
   - Metric:  **total database size**
 
@@ -173,13 +173,13 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
   - Threshold:  **1024**
 
-  - Period:  **over the last 5 minutes**
+  - Period:  **Over the last 5 minutes**
 
-  - Email owners, contributors, and readers: selected
+  - Email owners, contributors, and readers: **selected**
 
-  - Additional administrator email(s): any email address
+  - Additional administrator email(s): **any email address**
 
-  - Webhook: leave blank
+  - Webhook: **leave blank**
 
 
 6. Keep Internet Explorer open for the next exercise.
