--- a/Instructions/20533C_LAB_09.md
+++ b/Instructions/20533C_LAB_09.md
@@ -67,13 +67,13 @@ The main tasks for this exercise are as follows:
 3. Add a directory by using the following settings:
 
 
-  -  **DIRECTORY**: Create new directory
+  -  DIRECTORY: **Create new directory**
 
-  -  **NAME**: Adatum
+  -  NAME: **Adatum**
 
-  -  **DOMAIN NAME**:  _Use your initials + the_ _directory name + random numbers (e.g. abcadatum123456)_
+  -  DOMAIN NAME:  **_Use your initials + the_ _directory name + random numbers (e.g. abcadatum123456)_**
 
-  -  **COUNTRY** **OR REGION**: United States
+  -  COUNTRY OR REGION: **United States**
 
 
 
@@ -90,17 +90,17 @@ The main tasks for this exercise are as follows:
 1. Create a user in the Adatum directory by using the following settings:
 
 
-  -  **USER NAME**: rdesforges
+  -  USER NAME: **rdesforges**
 
-  -  **FIRST NAME**: Remi
+  -  FIRST NAME: **Remi**
 
-  -  **LAST NAME**: Desforges
+  -  LAST NAME: **Desforges**
 
-  -  **DISPLAY NAME**: Remi Desforges
+  -  DISPLAY NAME: **Remi Desforges**
 
-  -  **ROLE**: User
+  -  ROLE: **User**
 
-  -  **Enable Multi-Factor Authentication**: Do not select
+  -  Enable Multi-Factor Authentication: **Do not select**
 
 
 1. Note the new password.
@@ -108,22 +108,22 @@ The main tasks for this exercise are as follows:
 2. Create another user in the Adatum directory by using the following settings:
 
 
-  -  **USER NAME**: kgruber
+  -  USER NAME: **kgruber**
 
-  -  **FIRST NAME**: Karen
+  -  FIRST NAME: **Karen**
 
-  -  **LAST NAME**: Gruber
+  -  LAST NAME: **Gruber**
 
-  -  **DISPLAY NAME**: Karen Gruber
+  -  DISPLAY NAME: **Karen Gruber**
 
-  -  **ROLE**: Global Admin
+  -  ROLE: **Global Admin**
 
   - In the  **ALTERNATE EMAIL ADDRESS** box, type the email address of the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription
 
-  -  **Enable Multi-Factor Authentication**: Do not select
+  -  Enable Multi-Factor Authentication: **Do not select**
 
 
-1. Note the new password **.**
+1. Note the new password.
 
 2. Sign out of the portal.
 
@@ -142,9 +142,9 @@ The main tasks for this exercise are as follows:
 4. Create the following group in the Adatum directory:
 
 
-  -  **NAME**: Sales
+  -  NAME: **Sales**
 
-  -  **DESCRIPTION**: Sales team
+  -  DESCRIPTION: **Sales team**
 
 
 1. Add  **Remi Desforges** to the **Sales** group.
@@ -152,9 +152,9 @@ The main tasks for this exercise are as follows:
 2. Create the following group in the Adatum directory:
 
 
-  -  **NAME**: Marketing
+  -  NAME: **Marketing**
 
-  -  **DESCRIPTION**: Marketing employees
+  -  DESCRIPTION: **Marketing employees**
 
 
 1. Add  **Remi Desforges** to the **Marketing** group.
@@ -162,18 +162,18 @@ The main tasks for this exercise are as follows:
 2. Create the following group in the Adatum directory:
 
 
-  -  **NAME**: Sales and Marketing
+  -  NAME: **Sales and Marketing**
 
-  -  **DESCRIPTION**: Sales and Marketing employees
+  -  DESCRIPTION: **Sales and Marketing employees**
 
 
-1. Add the  **Sales** and **Marketing** groups to the **Sales and Marketing** group.
+1. Add the **Sales** and **Marketing** groups to the **Sales and Marketing** group.
 
 
 
 #### Task 5: Manage users and groups by using Azure PowerShell
   
-1. Start  **Windows PowerShell** ISE as an administrator.
+1. Start  **Windows PowerShell ISE** as an administrator.
 
 2. Open  **D:\Labfiles\Lab09\Starter\ExampleCommands.ps1**.
 
@@ -191,7 +191,7 @@ The main tasks for this exercise are as follows:
   New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory name here#>.onmicrosoft.com  -DisplayName "Mario Ledford" -FirstName "Mario" -LastName "Ledford" -Password 'Pa$$w0rd123' -ForceChangePassword $false -UsageLocation "US"
   ```
 
-6. Replace  **&lt;#Copy your Azure Directory name here#&gt;** with your Azure AD directory name. In the Windows PowerShell ISE, in the script pane, select the code that you just edited. On the toolbar, click the **Run Selection** button and wait for the script to complete.
+6. Replace  **<#Copy your Azure Directory name here#>** with your Azure AD directory name. In the Windows PowerShell ISE, in the script pane, select the code that you just edited. On the toolbar, click the **Run Selection** button and wait for the script to complete.
 
 7. In the PowerShell ISE, in the command prompt pane, enter the following command, and then press Enter to list all the users:
 
@@ -249,7 +249,6 @@ The main tasks for this exercise are as follows:
 
 20. Click  **GROUPS**, and verify that  **Azure team** appears in the list of groups.
 
-
 >  **Result**: After completing this exercise, you should have created some pilot users and groups in Azure AD by using the Azure portal and Microsoft Azure Active Directory Module for Windows PowerShell. You will also enable the Azure AD Premium functionality.
 
 
@@ -266,71 +265,58 @@ The main tasks for this exercise are as follows:
 2. Test SSO
 
 
-
 #### Task 1: Add directory applications and configure SSO
   
 1. In the  **Adatum** directory, create the following application from the gallery:
 
-
   -  **Microsoft Account (Windows Live)**
 
+2. Verify that  **Configure single sign-on** is enabled by default.
 
-1. Verify that  **Configure single sign-on** is enabled by default.
-
-2. Assign the application to the following user:
-
+3. Assign the application to the following user:
 
   -  **Mario Ledford**
 
+4. Select the option that allows you to enter the Microsoft account credentials on behalf of the user.
 
-1. Select the option that allows you to enter the Microsoft account credentials on behalf of the user.
+5. In the  **Email Address** box, type the email address of the Microsoft account associated with your Azure subscription. In the **Password** box, type the corresponding password, and then click the check mark.
 
-2. In the  **Email Address** box, type the email address of the Microsoft account associated with your Azure subscription. In the **Password** box, type the corresponding password, and then click the check mark.
-
-3. In the  **Adatum** directory, create the following application from the gallery:
-
+6. In the  **Adatum** directory, create the following application from the gallery:
 
   -  **Skype**
 
+7. Verify that  **Configure single sign-on** is enabled by default.
 
-1. Verify that  **Configure single sign-on** is enabled by default.
-
-2. Assign the application to the following user:
-
+8. Assign the application to the following user:
 
   -  **Mario Ledford**
 
-
-1. In the  **Assign User** dialog box, do not enter the Microsoft Account credentials on behalf of the user.
-
+9. In the  **Assign User** dialog box, do not enter the Microsoft Account credentials on behalf of the user.
 
 
 #### Task 2: Test SSO
   
 1. Go to  **https://account.activedirectory.windowsazure.com/applications**, and sign in by using the following credentials (where  **_XXXadatumXXX_** is your unique Adatum domain name):
 
+  - Username:  **mledford@XXXadatumXXX.onmicrosoft.com**
+
+  - Password:  **Pa$$w0rd123**
+
+2. On the applications page, note the options to update the credentials and report a problem about the Microsoft account. 
+
+3. Run the Microsoft Account application, and complete the Access Panel Extension Setup Wizard.
+
+4. Go to  **https://account.activedirectory.windowsazure.com/applications**, and sign in by using the following credentials (where  **_XXXadatumXXX_** is your unique Adatum domain name):
 
   - Username:  **mledford@XXXadatumXXX.onmicrosoft.com**
 
   - Password:  **Pa$$w0rd123**
 
+5. Click  **Microsoft Account**, enter the credentials for your subscription account, and verify that your sign-in to the Access Panel has automatically signed you in to your Microsoft account.
 
-1. On the applications page, note the options to update the credentials and report a problem about the Microsoft account. 
-
-2. Run the Microsoft Account application, and complete the Access Panel Extension Setup Wizard.
-
-3. Go to  **https://account.activedirectory.windowsazure.com/applications**, and sign in by using the following credentials (where  **_XXXadatumXXX_** is your unique Adatum domain name):
-
-
-  - Username:  **mledford@XXXadatumXXX.onmicrosoft.com**
-
-  - Password:  **Pa$$w0rd123**
-
-
-1. Click  **Microsoft Account**, enter the credentials for your subscription account, and verify that your sign-in to the Access Panel has automatically signed you in to your Microsoft account.
 >  **Note:** If you are prompted to sign in again, use the credentials for your subscription account.
-2. Click  **Skype**, and then verify that you are prompted for credentials. This happens because you did not enter any credentials on behalf of the user when you configured SSO.
 
+6. Click  **Skype**, and then verify that you are prompted for credentials. This happens because you did not enter any credentials on behalf of the user when you configured SSO.
 
 >  **Result**: After completing this exercise, you should have installed and configured a test application and validated the SSO experience.
 
@@ -361,19 +347,17 @@ The main tasks for this exercise are as follows:
   
 1. Go to  **https://account.activedirectory.windowsazure.com/applications**, and sign in by using the following credentials (where  **_XXXadatumXXX_** is your unique Adatum domain name):
 
-
   - Username:  **kgruber@XXXadatumXXX.onmicrosoft.com**
 
   - Password:  **Pa$$w0rd123**
 
+2. Note the following message:  **Your admin has required that you set up this account for additional security verification**.
 
-1. Note the following message:  **Your admin has required that you set up this account for additional security verification**.
+3. Click  **Set it up now**.
 
-2. Click  **Set it up now**.
+4. On the  **additional** **security** **verification** page, note the contact method options.
 
-3. On the  **additional** **security** **verification** page, note the contact method options.
-
-4. Optional step: If you have access to a mobile phone in the classroom, and have a signal or data connection, you can complete the additional security verification steps on the  **additional** **security** **verification** page.
+5. Optional step: If you have access to a mobile phone in the classroom, and have a signal or data connection, you can complete the additional security verification steps on the  **additional** **security** **verification** page.
 
 
 >  **Result**: After completing this exercise, you should have configured Multi-Factor Authentication for administrators.
@@ -401,13 +385,11 @@ The main tasks for this exercise are as follows:
 
 2. On MIA-CL1, click  **Settings**, click  **Accounts**, and then join MIA-CL1 into Azure AD by using the following credentials:
 
-
   - Username:  **kgruber@XXXadatumXXX.onmicrosoft.com**
 
   - Password:  **Pa$$w0rd123**
 
-
-1. Verify that  **MIA-CL1** is shown in the **Device** tab of the **Karen Gruber** user account.
+3. Verify that  **MIA-CL1** is shown in the **Device** tab of the **Karen Gruber** user account.
 
 
 
@@ -415,19 +397,17 @@ The main tasks for this exercise are as follows:
   
 1. Sign in to MIA-CL1 with Karen Gruber's credentials:
 
-
   - Username:  **kgruber@XXXadatumXXX.onmicrosoft.com**
 
   - Password:  **Pa$$w0rd123**
 
+2. Provide a verification method.
 
-1. Provide a verification method.
+3. Create a PIN.
 
-2. Create a PIN.
+4. Start Internet Explorer, and then go to  **https://portal.office.com**.
 
-3. Start Internet Explorer, and then go to  **https://portal.office.com**.
-
-4. Verify that you are automatically signed in as Karen Gruber by using SSO.
+5. Verify that you are automatically signed in as Karen Gruber by using SSO.
 
 
 
