--- a/Instructions/20533C_LAB_10.md
+++ b/Instructions/20533C_LAB_10.md
@@ -19,9 +19,9 @@
   
  Estimated Time: 60 minutes
 
-Virtual machine: ** 20533C-MIA-CL1**
+Virtual machine: **20533C-MIA-CL1**
 
- User name: ** Student**
+ User name: **Student**
 
  Password:  **Pa$$w0rd**
 
@@ -63,7 +63,7 @@ The main tasks for this exercise are as follows:
 3. In the Azure classic portal, create a new Azure Active Directory tenant with the following settings:
 
 
-  - DIRECTORY:  _Create new directory_
+  - DIRECTORY:  **_Create new directory_**
 
   - NAME:  **AdatumSync**
 
@@ -75,7 +75,7 @@ The main tasks for this exercise are as follows:
 1. In the Azure classic portal, in the newly created Azure Active Directory tenant, create a new Global Admin user with the following settings:
 
 
-  - TYPE OF USER:  _New user in your organization_
+  - TYPE OF USER:  **_New user in your organization_**
 
   - USER NAME:  **SyncAdmin**
 
@@ -87,9 +87,9 @@ The main tasks for this exercise are as follows:
 
   - ROLE: Global  **Admin**
 
-  - ALTERNATE EMAIL ADDRESS:  _Type the email address of your Microsoft account_
+  - ALTERNATE EMAIL ADDRESS:  **_Type the email address of your Microsoft account_**
 
-  - Enable Multi-Factor Authentication:  _Do not select_
+  - Enable Multi-Factor Authentication:  **_Do not select_**
 
 
 1. Change the temporary password of the newly created user to  **Pa$$w0rd** by using an Internet Explorer inPrivate Browsing session.
@@ -139,9 +139,9 @@ The main tasks for this exercise are as follows:
 1. On AdatumDC1, change the following attributes of some of your users in the Accounts OU of the Adatum directory:
 
 
-  -  **Job Title**:  **VP**
+  -  Job Title:  **VP**
 
-  -  **Department**:  **Marketing**
+  -  Department:  **Marketing**
 
 
 2. Start a Windows PowerShell session by using administrative credentials.
