--- a/Instructions/20533C_LAB_10.md
+++ b/Instructions/20533C_LAB_10.md
@@ -85,7 +85,7 @@ The main tasks for this exercise are as follows:
 
   - DISPLAY NAME:  **Sync Admin**
 
-  - ROLE: Global  **Admin**
+  - ROLE: **Global Admin**
 
   - ALTERNATE EMAIL ADDRESS:  **_Type the email address of your Microsoft account_**
 
