--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -55,21 +55,19 @@ The main tasks for this exercise are as follows:
 
 3. Create a new Azure Automation account with the following settings:
 
-
   - Name:  **LabAutomationAccount**
 
-  - Subscription: your current subscription  
+  - Subscription: **_your current subscription_**
 
-  - Resource group: create a new resource group named  **AutomationLabRG**
+  - Resource group: _create a new resource group named_  **AutomationLabRG**
 
-  - Location: the Azure region that you chose when running the provisioning script
+  - Location: **_the Azure region that you chose when running the provisioning script_**
 
-  - Create Azure Run As account: No
+  - Create Azure Run As account: **No**
 
-  - Pin to dashboard: Enable the checkbox
+  - Pin to dashboard: **Enable the checkbox**
 
-
-1. Wait for the Automation account to be provisioned. This should take less than a minute.
+4. Wait for the Automation account to be provisioned. This should take less than a minute.
 
 
 
@@ -77,21 +75,19 @@ The main tasks for this exercise are as follows:
   
 1. From the Azure classic portal, create a new user in the default directory of your Azure subscription, with the following settings:
 
-
   - USER NAME:  **LabAutomationUser**
 
-  - @: leave the default value
+  - @: **leave the default value**
 
   - ROLE:  **user**
 
-  - Multi Factor Authentication: disabled
+  - Multi Factor Authentication: **disabled**
 
   - DISPLAY NAME:  **Lab Automation User**
 
+2. From the Azure classic portal, configure the new user as a Co-Administrator of the current subscription.
 
-1. From the Azure classic portal, configure the new user as a Co-Administrator of the current subscription.
-
-2. Change the temporary password of the newly created user to  **Pa$$w0rd**.
+3. Change the temporary password of the newly created user to  **Pa$$w0rd**.
 
 
 
@@ -99,36 +95,31 @@ The main tasks for this exercise are as follows:
   
 1. In the Azure portal, in the  **Automation Account** blade, add a Credential asset:
 
-
   - Name:  **PSCredential**
 
   - Description:  **Lab Automation User (Co-Administrator)**
 
-  - User name: the name of the newly created AutomationUser account that you copied to Notepad
+  - User name: **_the name of the newly created AutomationUser account that you copied to Notepad_**
 
   - Password:  **Pa$$w0rd**
 
   - Confirm password:  **Pa$$w0rd**
 
+2. In the same Automation account, create the following Automation unencrypted Variable assets of the String type:
 
-1. In the same Automation account, create the following Automation unencrypted Variable assets of the String type:
-
-
-  - SubscriptionName: name of your subscription
+  - SubscriptionName: **_name of your subscription_**
 
   - AdminName:  **Student**
 
   - AdminPassword:  **Pa$$w0rd**
 
-  - Location:  _the name of Azure_ _region_ _that_ _you used when running the provisioning script at the beginning of this module_
+  - Location:  **_the name of Azure region that you used when running the provisioning script at the beginning of this module_**
 
   - Network:  **ADATUM-HQ-VNET**
 
   - Subnet:  **Subnet-1**
 
-
-1. In the same Automation account, create the following Schedule asset:
-
+3. In the same Automation account, create the following Schedule asset:
 
   - Name:  **EndOfDay**
 
@@ -141,7 +132,6 @@ The main tasks for this exercise are as follows:
   - Runs every :  **1 Day**
 
   - Set expiration: **No**
-
 
 >  **Result**: After completing this exercise, you should have configured a new Microsoft Azure Automation account, and created a new Microsoft Azure Active Directory (Azure AD) organizational account to use as an Automation Credential asset.
 
@@ -169,7 +159,6 @@ The main tasks for this exercise are as follows:
 2. Review the content of the runbook.
 
 
-
 #### Task 2: Publish and execute a runbook
   
 1. Publish the  **New-StorageAndVMs** runbook.
@@ -177,7 +166,6 @@ The main tasks for this exercise are as follows:
 2. Start the newly published runbook.
 
 3. View the progress of the runbook execution. Wait until the job completes.
-
 
 
 #### Task 3: Reset the environment
