--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -125,7 +125,7 @@ The main tasks for this exercise are as follows:
 
   - Description:  **End of Day**
 
-  - Starts: tomorrow's date at  **18:00:00**
+  - Starts: **_tomorrow's date_ at 18:00:00**
 
   - Recurrence: **Recurring**
 
