--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -107,17 +107,14 @@ The main tasks for this exercise are as follows:
 
 2. In the same Automation account, create the following Automation unencrypted Variable assets of the String type:
 
-  - SubscriptionName: **_name of your subscription_**
-
-  - AdminName:  **Student**
-
-  - AdminPassword:  **Pa$$w0rd**
-
-  - Location:  **_the name of Azure region that you used when running the provisioning script at the beginning of this module_**
-
-  - Network:  **ADATUM-HQ-VNET**
-
-  - Subnet:  **Subnet-1**
+| Name | Value |
+| ---- | ----- |
+| SubscriptionName | _Name of your subscription_ |
+| AdminName | Student |
+| AdminPassword | Pa$$w0rd |
+| Location | _Name of Azure Region you selected in setup-azure at beginning of module_ |
+| Network | ADATUM-HQ-VNET |
+| Subnet | Subnet-1 |
 
 3. In the same Automation account, create the following Schedule asset:
 
