--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -151,7 +151,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Import a runbook
   
-1. From the Azure portal, import the PowerShell workflow script  **New-StorageVNetAndVMs.ps1** residing in the D:\Labfiles\Lab11\Solution folder into your Automation account.
+1. From the Azure portal, import the PowerShell workflow script  **New-StorageAndVMs.ps1** residing in the D:\Labfiles\Lab11\Solution folder into your Automation account.
 
 2. Review the content of the runbook.
 
