--- a/Instructions/20533C_LAB_01.md
+++ b/Instructions/20533C_LAB_01.md
@@ -56,15 +56,17 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 3. Sign in by using the email address and password you set up for this course.
 
-4. Open the  **settings** page and then the **ADMINISTRATORS** page.
+4. Create a Global Administrator in the **Default Directory**.
 
-5. Add a co-administrator account by using a random, unique email address ending with  **@outlook.com**.
+5. Open the **settings** page and then the **ADMINISTRATORS** page.
 
-6. In Internet Explorer, navigate to the  **ACTIVE DIRECTORY** page in the Azure classic portal. If the **Let's talk about Azure AD** page appears, clear all checkboxes, and then click the checkmark at the bottom of the page.
+6. Add a co-administrator account by using the users UPN you created in the above step.
 
-7. On the  **Domains** page, note the domain name for your subscription.
+7. In Internet Explorer, navigate to the  **ACTIVE DIRECTORY** page in the Azure classic portal. If the **Let's talk about Azure AD** page appears, clear all checkboxes, and then click the checkmark at the bottom of the page.
 
-8. On the  **Users** page, note the two users: your user account and the co-administrator account you created earlier.
+8. On the  **Domains** page, note the domain name for your subscription.
+
+9. On the  **Users** page, note the two users: your user account and the co-administrator account you created earlier.
 
 
 
